<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Itinerary</string>
    <string name="title_activity_search">Cerca Itinerari</string>
    <string name="title_activity_result">Itinerari trovati</string>
    <string name="title_activity_map_itinerary">Mappa Itinerario</string>
    <string name="title_activity_selected_itinerary">Itinerario selezionato</string>
    <string name="title_activity_comments">Commenti punto d\'interesse</string>
    <string name="title_activity_favourites">Preferiti</string>
    <string name="title_activity_mod_categories">Categorie d\'interesse</string>
    <string name="title_activity_mod_itineraries">Itinerari salvati</string>
    <string name="from">Da:</string>
    <string name="max_length">Lunghezza max:</string>
    <string name="km">km</string>
    <string name="m">m</string>
    <string name="range">Raggio di ricerca:</string>
    <string name="desc_range">(Distanza dal luogo visitabile più vicino)</string>
    <string name="this_pos">Posizione attuale</string>
    <string name="go_search">Cerca!</string>
    <string name="desc_cat">Non hai scelto ancora nessuna categoria</string>
    <string name="duepunti">:</string>
    <string name="itinerary_from">Itinerario da</string>
    <string name="popularity">Popolarità</string>
    <string name="poi">punti d\'interesse</string>
    <string name="length">Lunghezza</string>
    <string name="desc_map">Clicca sui punti di interesse sulla mappa per leggere i dettagli.</string>
    <string name="checkin_poi">check-in effettuati</string>
    <string name="read_comments">Leggi i commenti</string>
    <string name="choose_macrocat">Scegli la macrocategoria:</string>
    <string name="choose_cat">Scegli la categoria:</string>
    <string name="fav_added">Itinerario aggiunto ai preferiti!</string>
    <string name="next_item">Link ad itinerario selezionato</string>
    <string name="desc_button_modCat">Modifica categorie d\'interesse</string>
    <string name="current_pos">Posizione attuale</string>
    <string name="mille">1000</string>
    <string name="five">5</string>
    <string name="comments">Vai ai commenti</string>
    <string name="show_interests">I tuoi interessi:</string>
    <string name="add_fav">Aggiungi ai preferiti</string>
    <string name="save">Salva modifiche</string>
    <string name="saved_itin">Itinerari salvati:</string>
    
    <string name="hello_world">Hello world!</string> <!-- da canc -->



</resources>
